@@ -301,6 +301,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP550
        Canon PIXMA MP600
        Canon PIXMA MP620
+       Canon PIXMA MP630
        Canon PIXMA MP640
        Canon PIXMA MP800 (EXPERIMENTAL)
        Canon PIXMA MP810 (EXPERIMENTAL)
